--- a/index.html
+++ b/index.html
@@ -18,59 +18,61 @@
   </head>
   <body>
     <header>
-      <section class="top-page">
-        <div class="container">
+      <section class="top">
+        <div class="top__container">
           <nav>
             <a class="webstudio" href="#" target="_blank">WebStudio</a>
 
-            <ul class="navigation">
+            <ul class="top__navigation">
               <li>
-                <a class="estudio" href="index.html" target="_self">Estudio</a>
+                <a class="navigation--estudio" href="index.html" target="_self">Estudio</a>
               </li>
               <li>
-                <a class="portafolio" href="portafolio.html" target="_self"
+                <a class="navigation--portafolio" href="portafolio.html" target="_self"
                   >Portafolio</a
                 >
               </li>
               <li>
-                <a class="contactos" href="#" target="_blank">Contactos</a>
+                <a class="navigation--contactos" href="#" target="_blank">Contactos</a>
               </li>
             </ul>
           </nav>
 
-          <ul class="contact">
+          <ul class="top__contact">
             <li>
-              <a href="mailto:info@devstudio.com" class="email" target="_self">
-                <svg class="icon">
+              <a href="mailto:info@devstudio.com" class="top__contact--email" target="_self">
+                <svg class="contact__email--icon">
                   <use href="Imagenes/SVG/sprite.svg#sobre"></use>
                 </svg>
                 info@devstudio.com
               </a>
             </li>
             <li>
-              <a href="tel:+525555296000" class="celphone" target="_self">
-                <svg class="icon">
+              <a href="tel:+525555296000" class="top__contact--celphone" target="_self">
+                <svg class="contact__celphone--icon">
                   <use href="Imagenes/SVG/sprite.svg#celular"></use>
                 </svg>
                 +52 55 5529 6000
               </a>
             </li>
           </ul>
+          
         </div>
       </section>
+
     </header>
 
     <main>
-      <section class="main-title">
-        <div class="container">
+      <section class="main__title">
+        <div class="main__title--container">
           <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
 
-          <button class="open__modal" type="button" data-modal-open>
+          <button class="button open__modal" type="button" data-modal-open>
             Solicite nuestro servicio
           </button>
 
-          <div class="backdrop is-hidden" data-modal>
-            <div class="modal-form is-hidden">
+          <div class="modal__backdrop is-hidden" data-modal>
+            <div class="modal__form is-hidden">
               <button
                 type="button"
                 class="close__modal button"
