--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script></script>
+    <link rel="stylesheet" href="./css/main.min.css">
 
     <link rel="stylesheet" href="style-index.css" />
     <link
@@ -25,20 +26,20 @@
 
             <ul class="top__navigation">
               <li>
-                <a class="navigation--estudio" href="index.html" target="_self"
+                <a class="navigation__option nav--estudio" href="index.html" target="_self"
                   >Estudio</a
                 >
               </li>
               <li>
                 <a
-                  class="navigation--portafolio"
+                  class="navigation__option nav--portafolio"
                   href="portafolio.html"
                   target="_self"
                   >Portafolio</a
                 >
               </li>
               <li>
-                <a class="navigation--contactos" href="#" target="_blank"
+                <a class="navigation__option nav--contactos" href="#" target="_blank"
                   >Contactos</a
                 >
               </li>
